fixed blurry speech bubble icon

--- a/static/css/global.styl
+++ b/static/css/global.styl
@@ -140,12 +140,12 @@ a
       position absolute
       top 50%
       left 50%
-      margin-top -12px
-      margin-left -13px
+      margin-top -15px
+      margin-left -15px
 
     .comment-count
       position relative
       top 50%
       font-size 10px
       text-align center
-      margin -1em 0.3em 0 0
+      margin -1.1em 0.7em 0 0
